--- a/P3.Driver.HomeKit/P3.Driver.HomeKit.csproj
+++ b/P3.Driver.HomeKit/P3.Driver.HomeKit.csproj
@@ -25,16 +25,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Automatica.Core.Driver.Utility" Version="0.9.0.540" />
+    <PackageReference Include="Automatica.Core.Driver.Utility" Version="0.11.0.642" />
     <PackageReference Include="Chaos.NaCl.Core" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="NSec.Cryptography" Version="18.6.0" />
-    <PackageReference Include="P3.Elliptic.Curve25519" Version="1.0.0" />
-    <PackageReference Include="Serilog" Version="2.8.0" />
-    <PackageReference Include="Serilog.AspNetCore" Version="2.1.2-dev-00028" />
+    <PackageReference Include="NSec.Cryptography" Version="19.5.0" />
+    <PackageReference Include="P3.Elliptic.Curve25519" Version="3.0.0" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.2-dev-00779" />
-    <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00798" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.1-dev-00771" />
     <PackageReference Include="srp" Version="1.0.4" />
   </ItemGroup>
