rewrite mdns service

--- a/P3.Driver.HomeKit/P3.Driver.HomeKit.csproj
+++ b/P3.Driver.HomeKit/P3.Driver.HomeKit.csproj
@@ -39,4 +39,8 @@
     <PackageReference Include="srp" Version="1.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\P3.Driver.HomeKit.Bonjour\P3.Driver.HomeKit.Bonjour.csproj" />
+  </ItemGroup>
+
 </Project>
