--- a/P3.Driver.HomeKit.Bonjour.Abstraction/P3.Driver.HomeKit.Bonjour.Abstraction.csproj
+++ b/P3.Driver.HomeKit.Bonjour.Abstraction/P3.Driver.HomeKit.Bonjour.Abstraction.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <AssemblyName>P3.Driver.HomeKit.Bonjour.Abstraction</AssemblyName>
     <RootNamespace>P3.Driver.HomeKit.Bonjour.Abstraction</RootNamespace>
 
