--- a/P3.Driver.HomeKit.Bonjour/P3.Driver.HomeKit.Bonjour.csproj
+++ b/P3.Driver.HomeKit.Bonjour/P3.Driver.HomeKit.Bonjour.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AssemblyName>P3.Driver.HomeKit.Bonjour</AssemblyName>
     <RootNamespace>P3.Driver.HomeKit.Bonjour</RootNamespace>
