--- a/P3.Driver.HomeKit.Bonjour.Abstraction/P3.Driver.HomeKit.Bonjour.Abstraction.csproj
+++ b/P3.Driver.HomeKit.Bonjour.Abstraction/P3.Driver.HomeKit.Bonjour.Abstraction.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SimpleBase" Version="1.3.1" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19351-01" PrivateAssets="All" />
+    <PackageReference Include="SimpleBase" Version="3.0.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
