--- a/P3.Driver.HomeKit/P3.Driver.HomeKit.csproj
+++ b/P3.Driver.HomeKit/P3.Driver.HomeKit.csproj
@@ -29,7 +29,7 @@
     <PackageReference Include="Chaos.NaCl.Core" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="NSec.Cryptography" Version="19.5.0" />
+    <PackageReference Include="NSec.Cryptography" Version="19.12.0-preview1" />
     <PackageReference Include="P3.Elliptic.Curve25519" Version="3.0.0" />
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
