--- a/P3.Driver.HomeKit.Bonjour.Abstraction/P3.Driver.HomeKit.Bonjour.Abstraction.csproj
+++ b/P3.Driver.HomeKit.Bonjour.Abstraction/P3.Driver.HomeKit.Bonjour.Abstraction.csproj
@@ -1,18 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <AssemblyName>P3.Driver.HomeKit.Bonjour.Abstraction</AssemblyName>
     <RootNamespace>P3.Driver.HomeKit.Bonjour.Abstraction</RootNamespace>
-
+    <Version>0.12.0.678</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="SimpleBase" Version="3.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Include="Resolving/RootHints" />
   </ItemGroup>
-
 </Project>
