--- a/P3.Driver.HomeKitFactory/Properties/launchSettings.json
+++ b/P3.Driver.HomeKitFactory/Properties/launchSettings.json
@@ -2,8 +2,8 @@
   "profiles": {
     "P3.Driver.HomeKitFactory": {
       "commandName": "Executable",
-      "executablePath": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\netcoreapp2.2\\win-x64\\Automatica.Core.exe",
-      "workingDirectory": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\netcoreapp2.2\\win-x64\\"
+      "executablePath": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\netcoreapp3.1\\Automatica.Core.exe",
+      "workingDirectory": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\netcoreapp3.1\\"
     }
   }
 }
