--- a/P3.Driver.HomeKit.Bonjour/P3.Driver.HomeKit.Bonjour.csproj
+++ b/P3.Driver.HomeKit.Bonjour/P3.Driver.HomeKit.Bonjour.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AssemblyName>P3.Driver.HomeKit.Bonjour</AssemblyName>
     <RootNamespace>P3.Driver.HomeKit.Bonjour</RootNamespace>
@@ -10,7 +10,7 @@
     <Version>0.14.0.1</Version>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\P3.Driver.HomeKit.Bonjour.Abstraction\P3.Driver.HomeKit.Bonjour.Abstraction.csproj" />
