--- a/P3.Driver.HomeKitFactory/Properties/launchSettings.json
+++ b/P3.Driver.HomeKitFactory/Properties/launchSettings.json
@@ -4,6 +4,11 @@
       "commandName": "Executable",
       "executablePath": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\netcoreapp3.1\\Automatica.Core.exe",
       "workingDirectory": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\netcoreapp3.1\\"
+    },
+    "Automatica": {
+      "commandName": "Executable",
+      "executablePath": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\net8.0\\Automatica.Core.exe",
+      "workingDirectory": "C:\\dev\\automatica.core\\automatica\\src\\automatica.core\\Automatica.Core\\bin\\Debug\\net8.0"
     }
   }
 }
